--- a/samples/segment-destination-example/src/main/res/values/strings.xml
+++ b/samples/segment-destination-example/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources tools:ignore="MissingTranslation" xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name">Userpilot</string>
     <string name="copyright_userpilot">© 2024 Userpilot. All rights reserved.</string>
 
@@ -11,6 +11,7 @@
 
     <!--  Identify  -->
     <string name="enter_user_id">Enter user ID</string>
+    <string name="enter_group_id">Enter group ID</string>
     <string name="user_id">User ID</string>
     <string name="identify">Identify</string>
     <string name="identify_user">Identify User</string>
@@ -18,6 +19,8 @@
     <string name="user_company_properties">User Company Properties</string>
     <string name="logout">Logout</string>
     <string name="anonymous">Anonymous</string>
+    <string name="group_id">Group ID</string>
+    <string name="group">Group</string>
 
     <!--  Screens  -->
     <string name="screen_one">Screen One</string>
