--- a/samples/segment-destination-example/src/main/res/values/strings.xml
+++ b/samples/segment-destination-example/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources tools:ignore="MissingTranslation" xmlns:tools="http://schemas.android.com/tools">
-    <string name="app_name">Userpilot</string>
+    <string name="app_name">Userpilot Segment</string>
     <string name="copyright_userpilot">© 2024 Userpilot. All rights reserved.</string>
 
     <!--  Main screen  -->
